--- a/style.css
+++ b/style.css
@@ -3,22 +3,14 @@
 @import "home.css";
 @import "menu.css";
 @import "nav.css";
+@import "pick.css";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
+@import "logIn.css";
+@import "account.css";
 
 *{
     margin: 0;
     padding: 0;
 }
-body{
-    margin-top: 20px;
-    margin-left: 20px;
-}
 
-.outline{
-    width:400px;
-    height: 670px;
-    border: 1px solid black;
-    border-radius: 10px;
-    overflow: auto;
-}
+
