--- a/nav.css
+++ b/nav.css
@@ -1,12 +1,14 @@
 .nav{
-    width: 400px;
+    width: 100%;
     height: 46px;
     background-color: var(--green);
     position: fixed;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
     display: flex;
+    bottom: 0;
     justify-content: space-around;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .nav a i{
