--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import "logIn.css";
 @import "account.css";
+@import "/tea-life/menu-list/menu-list.css";
+@import "content.css";
+
+
+
+
+
 
 *{
     margin: 0;
